# daredevil

./: .dockerignore  .env.example  .gitignore  CRASH_FIXES_SUMMARY.md  DOCKER.md  DOCKER_README.md  Dockerfile  GPU_CHANGES_SUMMARY.md  GPU_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_LLM_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION.md  OPTIMIZATION_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION.md  PORTUGUESE_BR_CHANGES.md  PORTUGUESE_BR_SUPPORT.md  QUICKSTART.md  QUICKSTART_LLM.md  QUICK_START_VIDEO.md  README.md  REQUIREMENTS.md  SETUP.md  UPLOAD_LIMIT_INCREASE.md  VERIFICATION.md  VIDEO_IMPLEMENTATION.md  VIDEO_SUMMARY.md  VIDEO_SUPPORT.md  check_video_implementation.py  demo_llm_post_processing.py  demo_post_processing.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_api.py  test_crash_fixes.py  test_proxy_fix.py  test_timing.py  test_timing_impl.py  test_video_support.py  (+1 more)
.github/: copilot-instructions.md
config/: __init__.py  celery.py  settings.py  urls.py
docs/: ARQUITETURA_CONVERSAO_REMOTA.md  ARQUIVOS_ADICIONADOS.txt  ASYNC_CODE_EXAMPLES.md  ASYNC_CONVERTER_INTEGRATION.md  ASYNC_IMPLEMENTATION_COMPLETED.md  ASYNC_IMPLEMENTATION_SUMMARY.md  ASYNC_OBRIGATORIO_SEM_FALLBACK.md  BEFORE_AFTER.md  BUG_FIX_REPORT.md  COMUNICACAO_FRONTEND.md  CONVERSOR_REMOTO_ATIVO.md  DEPLOY_INSTRUCTIONS.md  DOCKER_GUIDE.md  EMAIL_FRONTEND_WEBHOOK_FIX.md  EMAIL_RESPONSE_ASYNC_POLLING.md  ENTREGA_FINAL_REMOTE_CONVERTER.md  FINAL_SUMMARY_ASYNC.md  FIX_REMOTE_CONVERTER_PORTS.md  FIX_REMOTE_CONVERTER_URL.md  FRONTEND_GUIDE.md  GPU_CUDA_FIX.md  (+30 more)
(+36 files in other folders)
